# structured_light_3D_reconstruction

./: CMakeLists.txt  readme.md
src/: CameraDlp.cpp  CameraDlp.h  Config.h  Grating.cpp  Grating.h  MyPointCloud.cpp  MyPointCloud.h  Phaser.cpp  Phaser.h  main.cpp
